<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RomSwitcher</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="unknown">Unknown</string>
    <string name="noconnection">No connection</string>
    <string name="nobusybox">No busybox found</string>
    <string name="noroot">No root access</string>
    <string name="loading">Loading</string>
    <string name="downloading">Downloading</string>
    <string name="installing">Installing</string>
    <string name="error">Error</string>
    <string name="done">Done</string>
    <string name="no_support">No support, sorry!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="ok">Ok</string>
    <string name="new_app_version">New Application version %s!</string>

    <!-- Unit -->
    <string name="mb">MB</string>

    <!-- Welcome screen -->
    <string name="welcome">Welcome</string>
    <string name="welcome_summary">Thank you for downloading RomSwitcher!</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_summary">After every launch of RomSwitcher you should download the configuration file.\nThis will update the required informations to use RomSwitcher.\nBe careful as usual!</string>
    <string name="setup_complete">Your setup is complete!</string>
    <string name="use_romswitcher">Let\'s use RomSwitcher</string>

    <!-- Download -->
    <string name="download">Download</string>
    <string name="downloads">Downloads</string>
    <string name="app_version">Application version</string>
    <string name="current_version">Current version</string>
    <string name="last_version">Last version</string>
    <string name="download_configuration_file">Download configuration file</string>
    <string name="download_configuration_file_summary">Download the latest configuration(database) for your device. The configuration file also contains informations for latest updates.</string>
    <string name="download_tools">Download tools</string>
    <string name="download_tools_summary">Download the installation files.</string>
    <string name="download_configuration_first">Please download the configuration file first.</string>

    <!-- Credits -->
    <string name="credits">Credits</string>
    <string name="founder">Founder</string>
    <string name="grarak">Grarak</string>
    <string name="devs">Developers</string>
    <string name="devslist">Grarak\nMithun46\nMaDc0w\nbluefa1con\nDisturbed™\n</string>
    <string name="special_thanks">Special thanks</string>
    <string name="special_thanks_list">Stericson (RootTools)\nGokhanmoral (ramdisk scripts)\nDerTeufel1980 (recovery scripts)\nChenglu (touch recovery source)\nCyanogenMod (CWM)\n</string>
    <string name="source">Source</string>
    <string name="github"><u>https://github.com/Grarak/RomSwitcher\n</u></string>

    <!-- Installation -->
    <string name="installation">Installation</string>
    <string name="dev_notes">Note from Developer</string>
    <string name="install_tools">Install tools</string>
    <string name="install_tools_summary">Install the required files. Do this always after you downloaded the tools.</string>
    <string name="recovery">Recovery</string>
    <string name="reboot_into_recovery">Reboot into RomSwitcher recovery</string>
    <string name="reboot_into_recovery_summary">Reboot into RomSwitcher recovery, without overwriting the current recovery partition.</string>
    <string name="install_recovery">Install RomSwitcher recovery</string>
    <string name="install_recovery_summary">Install RomSwitcher recovery as default recovery.</string>
    <string name="download_tools_first">Please download the tools first.</string>
    <string name="install_tools_first">Please install the tools first.</string>
    <string name="check_boot_partition">Is %1$s the %2$s partition of your device?</string>
    <string name="reboot_now">Do you want to reboot your device?</string>
    <string name="settings">Settings</string>
    <string name="manualboot">Manualboot</string>
    <string name="appsharing">Appsharing</string>

    <!-- Rom -->
    <string name="rom">ROM %d</string>
    <string name="reboot_rom">Reboot to ROM %d</string>
    <string name="cannot_reboot">It\'s not possible to boot to ROM %d. Please boot back to default ROM first.</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="advanced_settings_summary">Please only use these options if you are running your default ROM!</string>
    <string name="choose_kernel">Choose kernel of ROM %d</string>
    <string name="choose_kernel_summary">Select a kernel which ROM %d should use.</string>
    <string name="choose_kernel_error">You didn\'t select a compatible kernel!</string>
    <string name="remove_rom">Remove ROM %d</string>
    <string name="backup_rom">Backup ROM %d</string>
    <string name="backup_rom_summary">Please only use lowercase for the name of the backup.</string>
    <string name="backup_name">Name of backup</string>
    <string name="empty_name">Dude, name is blank!</string>
    <string name="delete_backup_first">A backup with this name already exists. Please delete it first.</string>
    <string name="backing_up">Backing up</string>
    <string name="restore">Restore</string>
    <string name="restore_rom">Restore ROM %d</string>
    <string name="no_backup_found">No backups found for ROM %d</string>
    <string name="restoring">Restoring</string>
    <string name="delete">Delete</string>
    <string name="delete_backup">Delete backups of ROM %d</string>
    <string name="deleting">Deleting</string>
    <string name="rom_information">Information about ROM %d</string>

    <!-- Rom Information -->
    <string name="rom_error">ROM %d is not installed or corrupted</string>
    <string name="build_prop">Build prop information of ROM %d</string>
    <string name="rom_size">Size of ROM %d</string>

    <!-- File Browser -->
    <string name="files">files</string>
    <string name="show_all">Show all files</string>
    <string name="directory_empty">Directory empty</string>
    <string name="make_sure">Are you sure you want to select %s?</string>

    <!-- Appsharing -->
    <string name="sharing">Sharing</string>
    <string name="between">between</string>
    <string name="add">Add</string>
    <string name="no_sharings">No sharings defined</string>
    <string name="sharing_between">Sharing between ROM %1$s and ROM %2$s</string>
    <string name="edit">Edit</string>

</resources>
