<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="install_header">

    <PreferenceCategory android:title="@string/installation">

        <PreferenceScreen
            android:key="install_tools"
            android:title="@string/install_tools"
            android:summary="@string/install_tools_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/recovery"
        android:key="recovery_category">

        <PreferenceScreen
            android:key="reboot_into_recovery"
            android:title="@string/reboot_into_recovery"
            android:summary="@string/reboot_into_recovery_summary" />

        <PreferenceScreen
            android:key="install_recovery"
            android:title="@string/install_recovery"
            android:summary="@string/install_recovery_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings"
        android:key="settings_category">

        <SwitchPreference
            android:key="manualboot"
            android:title="@string/manualboot" />

        <SwitchPreference
            android:key="appsharing"
            android:title="@string/appsharing" />

    </PreferenceCategory>

</PreferenceScreen>