<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/downloads">

        <PreferenceScreen
            android:key="current_version"
            android:title="@string/current_version"
            android:summary="@string/unknown" />

        <PreferenceScreen
            android:key="last_version"
            android:title="@string/last_version"
            android:summary="@string/unknown" />

        <PreferenceScreen
            android:key="download_configuration_file"
            android:summary="@string/download_configuration_file_summary"
            android:title="@string/download_configuration_file" />

        <PreferenceScreen
            android:key="download_tools"
            android:title="@string/download_tools"
            android:summary="@string/download_tools_summary" />

    </PreferenceCategory>

</PreferenceScreen>