<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/founder"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/grarak"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DADADC" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/devs"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/devslist"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DADADC" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/special_thanks"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/special_thanks_list"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="1dp"
            android:layout_alignParentBottom="true"
            android:background="#DADADC" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/github"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:layout_weight="1"
                android:textStyle="italic"
                android:textColor="@android:color/holo_blue_dark" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>