<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="rom_header">

    <PreferenceCategory android:key="rom_category">

        <PreferenceScreen android:key="reboot_rom" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/advanced_settings"
        android:key="advanced_category">

        <PreferenceScreen android:summary="@string/advanced_settings_summary" />

        <PreferenceScreen android:key="choose_kernel" />

        <PreferenceScreen android:key="remove_rom" />

        <PreferenceScreen
            android:key="backup_rom"
            android:summary="@string/backup_rom_summary" />

        <PreferenceScreen android:key="restore_rom" />

        <PreferenceScreen android:key="delete_backup" />

        <PreferenceScreen android:key="rom_information" />

    </PreferenceCategory>

</PreferenceScreen>